# Nlib

./: CMakeLists.txt  NLIB.CBP  README.md  nlibConfig.cmake.in
include/nlib/threading/: buffers.hpp
nlib/: geometry.h  nlib.h  utility.h
nlib/debug/: callable.h  types.h
nlib/geometry/: frame.h  plane.h  point.h  shapesgen.h  triangle.h  triangulate.h  vec.h
nlib/reflection/: object.h
nlib/script/: mathscr.h  nsl.h
nlib/slib/: slib.h
nlib/utility/: arrwrap.h  convert.h  datatree.hpp  err11.h  errors.h  flags.h  formatting.h  init.h  lint.h  mtype.h  nullutil.h  premath.h  reference.h  stringtree.h
src/debug/: callable.cpp  types.cpp
src/geometry/: POINT.CPP  frame.cpp  plane.cpp  shapesgen.cpp  triangle.cpp  triangulate.cpp  vec.cpp
src/reflection/: object.cpp
src/script/: mathscr.cpp  nsl.cpp
src/slib/: slib.cpp
src/utility/: arrwrap.cpp  convert.cpp  errors.cpp  flags.cpp  formatting.cpp  init.cpp  lint.cpp  mtype.cpp  premath.cpp
threading/: CMakeLists.txt
threading/include/nlib/threading/: buffers.hpp
threading/src/: buffers.cpp
